// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchNewsData 1`] = `
<div
  className="ant-layout"
>
  <div
    className="app-header ant-layout-header"
  >
    <h1
      className="app-headline"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <img
          alt="The New York Times"
          className="app-logo"
          src="nytlogo.png"
        />
      </a>
    </h1>
  </div>
  <div
    className="app-content ant-layout-content"
  >
    <div
      className="ant-list ant-list-vertical ant-list-lg ant-list-split"
    >
      <div
        className="ant-spin-nested-loading"
        style={null}
      >
        <div
          className="ant-spin-container"
        >
          <div
            className="ant-list-item"
          >
            <div
              className="ant-list-item-content ant-list-item-content-single"
            >
              <div
                className="ant-skeleton ant-skeleton-active"
              >
                <div
                  className="ant-skeleton-content"
                >
                  <h3
                    className="ant-skeleton-title"
                    style={
                      Object {
                        "width": "38%",
                      }
                    }
                  />
                  <ul
                    className="ant-skeleton-paragraph"
                  >
                    <li
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    />
                    <li
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    />
                    <li
                      style={
                        Object {
                          "width": "61%",
                        }
                      }
                    />
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ant-list-item"
          >
            <div
              className="ant-list-item-content ant-list-item-content-single"
            >
              <div
                className="ant-skeleton ant-skeleton-active"
              >
                <div
                  className="ant-skeleton-content"
                >
                  <h3
                    className="ant-skeleton-title"
                    style={
                      Object {
                        "width": "38%",
                      }
                    }
                  />
                  <ul
                    className="ant-skeleton-paragraph"
                  >
                    <li
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    />
                    <li
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    />
                    <li
                      style={
                        Object {
                          "width": "61%",
                        }
                      }
                    />
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ant-list-item"
          >
            <div
              className="ant-list-item-content ant-list-item-content-single"
            >
              <div
                className="ant-skeleton ant-skeleton-active"
              >
                <div
                  className="ant-skeleton-content"
                >
                  <h3
                    className="ant-skeleton-title"
                    style={
                      Object {
                        "width": "38%",
                      }
                    }
                  />
                  <ul
                    className="ant-skeleton-paragraph"
                  >
                    <li
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    />
                    <li
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    />
                    <li
                      style={
                        Object {
                          "width": "61%",
                        }
                      }
                    />
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ant-list-item"
          >
            <div
              className="ant-list-item-content ant-list-item-content-single"
            >
              <div
                className="ant-skeleton ant-skeleton-active"
              >
                <div
                  className="ant-skeleton-content"
                >
                  <h3
                    className="ant-skeleton-title"
                    style={
                      Object {
                        "width": "38%",
                      }
                    }
                  />
                  <ul
                    className="ant-skeleton-paragraph"
                  >
                    <li
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    />
                    <li
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    />
                    <li
                      style={
                        Object {
                          "width": "61%",
                        }
                      }
                    />
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ant-list-item"
          >
            <div
              className="ant-list-item-content ant-list-item-content-single"
            >
              <div
                className="ant-skeleton ant-skeleton-active"
              >
                <div
                  className="ant-skeleton-content"
                >
                  <h3
                    className="ant-skeleton-title"
                    style={
                      Object {
                        "width": "38%",
                      }
                    }
                  />
                  <ul
                    className="ant-skeleton-paragraph"
                  >
                    <li
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    />
                    <li
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    />
                    <li
                      style={
                        Object {
                          "width": "61%",
                        }
                      }
                    />
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ant-list-item"
          >
            <div
              className="ant-list-item-content ant-list-item-content-single"
            >
              <div
                className="ant-skeleton ant-skeleton-active"
              >
                <div
                  className="ant-skeleton-content"
                >
                  <h3
                    className="ant-skeleton-title"
                    style={
                      Object {
                        "width": "38%",
                      }
                    }
                  />
                  <ul
                    className="ant-skeleton-paragraph"
                  >
                    <li
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    />
                    <li
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    />
                    <li
                      style={
                        Object {
                          "width": "61%",
                        }
                      }
                    />
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ant-list-item"
          >
            <div
              className="ant-list-item-content ant-list-item-content-single"
            >
              <div
                className="ant-skeleton ant-skeleton-active"
              >
                <div
                  className="ant-skeleton-content"
                >
                  <h3
                    className="ant-skeleton-title"
                    style={
                      Object {
                        "width": "38%",
                      }
                    }
                  />
                  <ul
                    className="ant-skeleton-paragraph"
                  >
                    <li
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    />
                    <li
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    />
                    <li
                      style={
                        Object {
                          "width": "61%",
                        }
                      }
                    />
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ant-list-item"
          >
            <div
              className="ant-list-item-content ant-list-item-content-single"
            >
              <div
                className="ant-skeleton ant-skeleton-active"
              >
                <div
                  className="ant-skeleton-content"
                >
                  <h3
                    className="ant-skeleton-title"
                    style={
                      Object {
                        "width": "38%",
                      }
                    }
                  />
                  <ul
                    className="ant-skeleton-paragraph"
                  >
                    <li
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    />
                    <li
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    />
                    <li
                      style={
                        Object {
                          "width": "61%",
                        }
                      }
                    />
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ant-list-item"
          >
            <div
              className="ant-list-item-content ant-list-item-content-single"
            >
              <div
                className="ant-skeleton ant-skeleton-active"
              >
                <div
                  className="ant-skeleton-content"
                >
                  <h3
                    className="ant-skeleton-title"
                    style={
                      Object {
                        "width": "38%",
                      }
                    }
                  />
                  <ul
                    className="ant-skeleton-paragraph"
                  >
                    <li
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    />
                    <li
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    />
                    <li
                      style={
                        Object {
                          "width": "61%",
                        }
                      }
                    />
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ant-list-item"
          >
            <div
              className="ant-list-item-content ant-list-item-content-single"
            >
              <div
                className="ant-skeleton ant-skeleton-active"
              >
                <div
                  className="ant-skeleton-content"
                >
                  <h3
                    className="ant-skeleton-title"
                    style={
                      Object {
                        "width": "38%",
                      }
                    }
                  />
                  <ul
                    className="ant-skeleton-paragraph"
                  >
                    <li
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    />
                    <li
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    />
                    <li
                      style={
                        Object {
                          "width": "61%",
                        }
                      }
                    />
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`fetchNewsDataFailure 1`] = `
<div
  className="ant-layout"
>
  <div
    className="app-header ant-layout-header"
  >
    <h1
      className="app-headline"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <img
          alt="The New York Times"
          className="app-logo"
          src="nytlogo.png"
        />
      </a>
    </h1>
  </div>
  <div
    className="app-content ant-layout-content"
  >
    <div
      className="ant-list ant-list-vertical ant-list-lg ant-list-split"
    >
      <div
        className="ant-spin-nested-loading"
        style={null}
      >
        <div
          className="ant-spin-container"
        >
          <div
            className="ant-list-empty-text"
          >
            No data
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`fetchNewsDataSuccess 1`] = `
<div
  className="ant-layout"
>
  <div
    className="app-header ant-layout-header"
  >
    <h1
      className="app-headline"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <img
          alt="The New York Times"
          className="app-logo"
          src="nytlogo.png"
        />
      </a>
    </h1>
  </div>
  <div
    className="app-content ant-layout-content"
  >
    <div
      className="ant-list ant-list-vertical ant-list-lg ant-list-split"
    >
      <div
        className="ant-spin-nested-loading"
        style={null}
      >
        <div
          className="ant-spin-container"
        >
          <div
            className="ant-list-empty-text"
          >
            No data
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
